Data base integrated

--- a/SBackUp/packages.config
+++ b/SBackUp/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
   <package id="FontAwesome.Sharp" version="6.1.1" targetFramework="net461" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.119.0" targetFramework="net461" />
 </packages>
