--- a/SBackUp/SBackUp.csproj
+++ b/SBackUp/SBackUp.csproj
@@ -64,10 +64,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Models\ITaskRepository.cs" />
+    <Compile Include="Models\TaskManager.cs" />
     <Compile Include="Models\TaskModel.cs" />
     <Compile Include="Repositories\RepositoryBase.cs" />
-    <Compile Include="Repositories\TaskRepository.cs" />
+    <Compile Include="TaskContainer.cs" />
     <Compile Include="ViewModels\TaskViewModel.cs" />
     <Compile Include="Views\TaskView.xaml.cs">
       <DependentUpon>TaskView.xaml</DependentUpon>
@@ -80,7 +80,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\TaskManager.xaml">
+    <Page Include="Views\TaskManagerView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -91,8 +91,8 @@
     <Compile Include="ViewModels\TaskManagerViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="ViewModels\ViewModelCommand.cs" />
-    <Compile Include="Views\TaskManager.xaml.cs">
-      <DependentUpon>TaskManager.xaml</DependentUpon>
+    <Compile Include="Views\TaskManagerView.xaml.cs">
+      <DependentUpon>TaskManagerView.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\TaskView.xaml">
